# bubble_analyser

./: .editorconfig  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  Bubble Analyser.spec  README.md  bubble_analyser_setup.iss  build_executable.py  build_mac_app.py  dev-requirements.txt  mkdocs.yml  pyproject.toml  requirements.txt  standalone.spec
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: auto-merge.yml  check-links.yml  ci.yml  release.yml
bubble_analyser/: Config.py  GUI_manual.py  __init__.py  __main__.py  background_subtraction_threshold.py  calculate_circle_properties.py  calculate_px2cm.py  calculate_px2mm.py  config.py  config.toml  default.py  image_postprocess.py  image_preprocess.py  morphological_process.py  test_on_methods.py  threshold.py
bubble_analyser/bubble/: __init__.py  bubble.py
bubble_analyser/cnn_methods/: bubmask_wrapper.py  test_bubmask_loading.py  test_cnn.py
bubble_analyser/gui/: __init__.py  component_handlers.py  config.toml  event_handlers.py  gui.py  test.py  test_toml.py
bubble_analyser/methods/: __init__.py  bubmask_method.py  information.txt  watershed_methods.py
bubble_analyser/mrcnn/: config.py  model.py  parallel_model.py  utils.py  visualize.py
bubble_analyser/processing/: __init__.py  ba_result.xlsx  calculate_px2mm.py  checkers.py  circle_handler.py  config.py  cv2_to_qpixmap.py  error_handler.py  fit_ellipse.py  image.py  image_postprocess.py  image_preprocess.py  img_sharpening.py  logger_writer.py  mask_to_ellipse.py  morphological_process.py  threshold_methods.py  watershed_parent_class.py
bubble_analyser/sample_images/calibration_files/: calibration.csv
bubble_analyser/weights/: information.txt  loader.py
data_aggregation/: analyse_result_ba.h5  analyse_result_ba.xlsx  ellipse_properties.csv  get_ellipse_data.py  get_psd_features.py  group_data.py
docs/: index.md
examples/: bubmask_integration_example.py
results/: information.txt
tests/: 20241005_xx.csv  20241011.csv  test.py  test_bubble_analyser.py  test_parallel_implementation.py
tests/calibration_files/: config.toml
tests/cnn_watershed_conversion_test/: IMG_9161_rgb_watershed_labels.npy
tests/cnn_watershed_result/: IMG_9161_rgb_watershed_labels.npy
tests/integration/: test_pipeline.py
tests/test_samples_for_functions/: test_labels_watershed.npy
tests/unit/bubble/: test_bubble_config.py
tests/unit/methods/: test_bubmask_method.py  test_watershed_methods.py
tests/unit/processing/: test_calculate_px2mm.py  test_circle_handler.py  test_config.py  test_img_sharpening.py
tests/with_clahe_usm/: test_labels_watershed.npy
tests/with_gr/: test_labels_watershed.npy
tests/with_grng_DT/: test_labels_watershed.npy
tests/with_grng_DT/without_gaussianblur/: test_labels_watershed.npy
tests/with_grng_OT/: config.txt  test_labels_watershed.npy
tests/with_normal_img/: test_labels_watershed.npy
