[tool.poetry]
name = "bubble_analyser"
version = "0.1.0"
description = "[Description for project.]"
authors = [
    "Diego Alonso Álvarez <d.alonso-alvarez@imperial.ac.uk>",
    "Imperial College London RSE Team <ict-rse-team@imperial.ac.uk>"
]

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.9.1.post1"
toml = "^0.10.2"
numpy = "^2.0.1"
scikit-image = "^0.24.0"
scipy = "^1.14.0"
pydantic = "^2.8.2"
pathlib = "^1.0.1"
typing-extensions = "^4.12.2"
opencv-python = "^4.10.0.84"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.29"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
pytest-cov = "^5.0.0"
pytest-mypy = "^0.10.0"
pytest-mock = "^3.7.0"
pre-commit = "^4.0.1"
ruff = "^0.5.2"
types-toml = "^0.10.8.20240310"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true
disallow_any_explicit = true
disallow_any_generics = true
warn_unreachable = true
warn_unused_ignores = false
disallow_untyped_defs = true
exclude = [".venv/"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
addopts = "-v --mypy -p no:warnings --cov=bubble_analyser --cov-report=html --doctest-modules --ignore=bubble_analyser/__main__.py"

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = [
    "D",   # pydocstyle
    "E",   # pycodestyle
    "F",   # Pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "RUF"  # ruff
]
pydocstyle.convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D100", "D104"] # Missing docstring in public module, Missing docstring in public package
