[tool.poetry]
name = "bubble_analyser"
version = "0.2.2"
description = "[Description for project.]"
authors = [
    "Mr Yiyang Guan <yg1521@ic.ac.uk>",
    "Dr Diego Mesa <d.mesa@ic.ac.uk>",
    "Diego Alonso Álvarez <d.alonso-alvarez@imperial.ac.uk>",
    "Dr Paulina Quintanilla",
    "Dr Francisco Reyes"
]

[tool.poetry.dependencies]
python = ">=3.11, <3.13"
matplotlib = "^3.9.1.post1"
toml = "^0.10.2"
numpy = "<=1.26.4"
scikit-image = "^0.25.1"
scipy = "^1.14.0"
pydantic = "^2.11.1"
typing-extensions = "^4.12.2"
pyside6 = "^6.8.3"
datetime = "^5.5"
numba = "^0.60.0"
opencv-python = "^4.11.0.86"
mkdocstrings-python = ">=0.18"
pandas = "^2.3.2"
openpyxl = "^3.1.5"
h5py = "^3.14.0"
xlsxwriter = "^3.2.5"
tensorflow = "^2.20.0"
ipython = "^9.8.0"
imgaug = "^0.4.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"
mkdocs-material = "^9.6.11"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^6.0.0"
pytest-mypy = "^1.0.0"
pytest-mock = "^3.7.0"
pre-commit = "^4.2.0"
ruff = "^0.11.2"
types-toml = "^0.10.8.20240310"
pyinstaller = "^6.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true
disallow_any_explicit = true
disallow_any_generics = true
warn_unreachable = true
warn_unused_ignores = false
disallow_untyped_defs = true
exclude = [".venv/"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
addopts = "-v --mypy -p no:warnings --cov=bubble_analyser --cov-report=html --doctest-modules --ignore=bubble_analyser/__main__.py"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "D",   # pydocstyle
    "E",   # pycodestyle
    "F",   # Pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "RUF"  # ruff
]
pydocstyle.convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D100", "D104"] # Missing docstring in public module, Missing docstring in public package
